--- a/2PF-Vazquez/angular.json
+++ b/2PF-Vazquez/angular.json
@@ -104,5 +104,9 @@
       }
     }
   },
-  "defaultProject": "2PF-Vazquez"
+  "defaultProject": "2PF-Vazquez",
+  "cli": {
+    "defaultCollection": 
+      "@ngrx/schematics"
+  }
 }
